<resources>
    <string name="app_name">Dungeon Scrolls</string>
    <string name="login_activity_tabLogin_title">Entrar</string>
    <string name="login_activity_tabLogin_button">Conectar</string>
    <string name="login_activity_tabSignUp_title">Criar Conta</string>
    <string name="login_activity_tabSignUp_email">Email</string>
    <string name="login_activity_tabSignUp_button">Cadastrar</string>
    <string name="login_activity_username_textView">Nome de Usuário</string>
    <string name="login_activity_password_textView">Senha</string>
    <string name="allRooms_activity_tabAllRooms_title">Todas as salas</string>
    <string name="userRooms_activity_tabUserRooms_title">Suas salas</string>
    <string name="userRooms_activity_btn_criarSala">criar sala</string>
    <string name="room_activity_creation_nomeDaSala">Nome da Sala</string>
    <string name="room_activity_creation_senha">Senha (Opcional)</string>
    <string name="room_activity_creation_btnCriar">Criar</string>
    <string name="room_activity_creation_resumoDaHistoria">Historia</string>
    <string name="room_activity_fichas">Suas Fichas</string>
    <string name="room_activity_resumoHistoria">Resumo da História</string>
    <string name="room_activity_anotacoes">Outras Anotações</string>
    <string name="room_activity_adicionar">Adicionar Ficha</string>
    <string name="roomsMenu_dialogFragment_senha_senhaDica">Digite a senha da sala aqui</string>
    <string name="roomsMenu_dialogFragment_senha_prosseguir">Prosseguir</string>
    <string name="roomsMenu_dialogFragment_senha_cancelar">Cancelar</string>
    <string name="sheet_activity_recordSheet_tituloPrincipal">Ficha de Personagem</string>
    <string name="sheet_activity_recordSheet_title">Ficha de Personagem</string>
    <string name="sheet_activity_recordSheet_name">Nome Completo</string>
    <string name="sheet_activity_recordSheet_idade">Idade</string>
    <string name="sheet_activity_recordSheet_experiencia">Experiência</string>
    <string name="sheet_activity_recordSheet_raca">Raça</string>
    <string name="sheet_activity_recordSheet_classes">Classe(s)</string>
    <string name="sheet_activity_recordSheet_nivel">Nível</string>
    <string name="sheet_activity_recordSheet_habilidadesTitulo">Habilidades</string>
    <string name="sheet_activity_recordSheet_habilidadesNome">Nome</string>
    <string name="sheet_activity_recordSheet_habilidadesValor">Valor Base</string>
    <string name="sheet_activity_recordSheet_habilidadesModificador">Modificador</string>
    <string name="sheet_activity_recordSheet_habilidadesForcaSigla">FOR</string>
    <string name="sheet_activity_recordSheet_habilidadesForca">Força</string>
    <string name="sheet_activity_recordSheet_habilidadesDestrezaSigla">DES</string>
    <string name="sheet_activity_recordSheet_habilidadesDestreza">Destreza</string>
    <string name="sheet_activity_recordSheet_habilidadesConstituicaoSigla">CON</string>
    <string name="sheet_activity_recordSheet_habilidadesConstituicao">Constituição</string>
    <string name="sheet_activity_recordSheet_habilidadesSabedoriaSigla">SAB</string>
    <string name="sheet_activity_recordSheet_habilidadesSabedoria">Sabedoria</string>
    <string name="sheet_activity_recordSheet_habilidadesInteligenciaSigla">INT</string>
    <string name="sheet_activity_recordSheet_habilidadesInteligencia">Inteligência</string>
    <string name="sheet_activity_recordSheet_habilidadesCarismaSigla">CAR</string>
    <string name="sheet_activity_recordSheet_habilidadesCarisma">Carisma</string>
    <string name="sheet_activity_recordSheet_resistenciasTitulo">Testes de Resistências</string>
    <string name="sheet_activity_recordSheet_resistenciasNome">Nome</string>
    <string name="sheet_activity_recordSheet_resistenciasTotal">Total</string>
    <string name="sheet_activity_recordSheet_resistenciasBase">Base</string>
    <string name="sheet_activity_recordSheet_resistenciasOutros">Outros</string>
    <string name="sheet_activity_recordSheet_resistenciasModificador">Modificador</string>
    <string name="sheet_activity_recordSheet_resistenciasFortitude" translatable="false">Fortitude</string>
    <string name="sheet_activity_recordSheet_resistenciasReflexos">Reflexos</string>
    <string name="sheet_activity_recordSheet_resistenciasVontade">Vontade</string>
    <string name="sheet_activity_recordSheet_age">Idade</string>
    <string name="sheet_activity_recordSheet_race">Raça</string>
    <string name="sheet_activity_recordSheet_pv">Vida</string>
    <string name="sheet_activity_recordSheet_ca">Armadura</string>
    <string name="sheet_activity_recordSheet_attack">Modificador de Ataque</string>
    <string name="sheet_activity_recordSheet_aparencia">Aparência</string>
    <string name="sheet_activity_recordSheet_gerais">Características Gerais</string>
    <string name="sheet_activity_recordSheet_combate">Combate</string>
    <string name="sheet_activity_recordSheet_especiais">Especiais</string>
    <string name="sheet_activity_recordSheet_featsSkills">Talentos e Perícias</string>
    <string name="sheet_activity_recordSheet_equipamentos">Equipamentos</string>
    <string name="sheet_activity_recordSheet_magia">Magia</string>
    <string name="sheet_activity_recordSheet_outrasCategorias">Outras Categorias</string>
    <string name="sheet_activity_appearanceSheet_title">Informações e Aparência</string>
    <string name="sheet_activity_appearanceSheet_height">Altura(m)</string>
    <string name="sheet_activity_appearanceSheet_weight">Peso(kg)</string>
    <string name="sheet_activity_appearanceSheet_inclination">Tendência</string>
    <string name="sheet_activity_appearanceSheet_divinity">Divindade(s)</string>
    <string name="sheet_activity_appearanceSheet_gender">Sexo</string>
    <string name="sheet_activity_appearanceSheet_size">Categoria de Tamanho</string>
    <string name="sheet_activity_appearanceSheet_appearange">Descrição da Aparência</string>
    <string name="sheet_activity_appearanceSheet_languages">Idiomas Aprendidos</string>
    <string name="sheet_activity_featSkillSheet_title">Talentos e Perícias</string>
    <string name="sheet_activity_featSkillSheet_feats">Talentos</string>
    <string name="sheet_activity_featSkillSheet_skills">Perícias</string>
    <string name="sheet_activity_equipmentItensSheet_title">Itens e Equipamentos</string>
    <string name="sheet_activity_equipmentItensSheet_titleItens">Itens e Moedas</string>
    <string name="sheet_activity_equipmentItensSheet_pc">Cobre</string>
    <string name="sheet_activity_equipmentItensSheet_pp">Prata</string>
    <string name="sheet_activity_equipmentItensSheet_po">Ouro</string>
    <string name="sheet_activity_equipmentItensSheet_pl">Platina</string>
    <string name="sheet_activity_equipmentItensSheet_anotherItens">Inventário</string>
    <string name="sheet_activity_equipmentItensSheet_maxWeight">Peso Max.</string>
    <string name="sheet_activity_equipmentItensSheet_carriedWeight">Peso Total Carregado</string>
    <string name="sheet_activity_equipmentItensSheet_titleEquipment">Equipamentos de Combate</string>
    <string name="sheet_activity_equipmentItensSheet_armor">Armadura Equipada</string>
    <string name="sheet_activity_equipmentItensSheet_protectionIten">Itens de Proteção</string>
    <string name="sheet_activity_equipmentItensSheet_weapons">Armas Equipadas</string>
    <string name="sheet_activity_battleInformationSheet_title">Características de Combate</string>
    <string name="sheet_activity_battleInformationSheet_details">Detalhes</string>
    <string name="sheet_activity_battleInformationSheet_caTitulo">Armadura e Defesa</string>
    <string name="sheet_activity_battleInformationSheet_caNormal">CA Total</string>
    <string name="sheet_activity_battleInformationSheet_caToque">CA Toque</string>
    <string name="sheet_activity_battleInformationSheet_caSurpresa">CA Surp.</string>
    <string name="sheet_activity_battleInformationSheet_caArmadura">Armadura</string>
    <string name="sheet_activity_battleInformationSheet_caArmaduraNatural">A. Natural</string>
    <string name="sheet_activity_battleInformationSheet_caOutros">Outros</string>
    <string name="sheet_activity_battleInformationSheet_resistenciasNaturais">Resistências Naturais</string>
    <string name="sheet_activity_battleInformationSheet_resistenciaMagica">Resistência Mágica</string>
    <string name="sheet_activity_battleInformationSheet_pvTitulo">Pontos de Vida</string>
    <string name="sheet_activity_battleInformationSheet_pvAtual">PV Atual</string>
    <string name="sheet_activity_battleInformationSheet_pvTotal">PV Total</string>
    <string name="sheet_activity_battleInformationSheet_reducaoDeDano">Redução de Dano</string>
    <string name="sheet_activity_battleInformationSheet_iniciativaTitulo">Iniciativa</string>
    <string name="sheet_activity_battleInformationSheet_iniciativa">Total</string>
    <string name="sheet_activity_battleInformationSheet_iniciativaDestreza">Destreza</string>
    <string name="sheet_activity_battleInformationSheet_iniciativaOutros">Outros</string>
    <string name="sheet_activity_battleInformationSheet_deslocamento">Deslocamento Total</string>
    <string name="sheet_activity_battleInformationSheet_agarrarTitulo">Agarrar</string>
    <string name="sheet_activity_battleInformationSheet_agarrar">Total</string>
    <string name="sheet_activity_battleInformationSheet_agarrarForca">Força</string>
    <string name="sheet_activity_battleInformationSheet_agarrarOutros">Outros</string>
    <string name="sheet_activity_battleInformationSheet_bba">Bônus Base de Ataque</string>
    <string name="sheet_activity_battleInformationSheet_attacks">Ataques</string>
    <string name="sheet_activity_magicInformationSheet_titulo">Informações de Magia</string>
    <string name="sheet_activity_magicInformationSheet_testeDeResistencia">Teste de Resistência</string>
    <string name="sheet_activity_magicInformationSheet_chanceDeFalhaArcana">Chance de Falha</string>
    <string name="sheet_activity_magicInformationSheet_numeroDeMagiasPorDia">Número de Magias por Dia</string>
    <string name="sheet_activity_magicInformationSheet_dominioEscola">Domínios/Escola Especializada</string>
    <string name="sheet_activity_magicInformationSheet_magias">Magias Conhecidas</string>
    <string name="sheet_activity_specialProperties_title">Propriedades Especiais</string>
    <string name="sheet_activity_specialProperties_qualidadesEspeciais">Qualidades Especiais</string>
    <string name="sheet_activity_specialProperties_habilidadesEspeciais">Habilidades Especiais</string>
    <string name="options_activity_opcoesDeUsuario">Características de Usuário</string>
    <string name="options_activity_nome">Nome de Usuário</string>
    <string name="options_activity_senha">Senha</string>
    <string name="options_activity_email" translatable="false">Email</string>
    <string name="options_activity_salvar">Salvar Alterações</string>
    <string name="menu_navigationDrawer_listaDeSalas">Lista de Salas</string>
    <string name="menu_navigationDrawer_paginaPrincipal">Página Principal</string>
    <string name="menu_navigationDrawer_ficha">Ficha de Personagem</string>
    <string name="menu_navigationDrawer_configuracoes">Configurações</string>
    <string name="menu_navigationDrawer_sairDaConta">Sair da Conta</string>
    <string name="toast_login_senhaInvalida">Senha incorreta</string>
    <string name="toast_login_usuarioInexistente">Usuario inexistente</string>
    <string name="toast_signUp_usuarioJaExistente">Nome ja existente</string>
    <string name="toast_signUp_sucessoCadastro">Cadastrado com sucesso</string>
    <string name="toast_roomCreation_salaJaExistente">Sala ja existente</string>
    <string name="toast_roomCreation_salaCriada">Sala criada com sucesso</string>
    <string name="choose_language_english" translatable="false">American English</string>
    <string name="gerais_salvar">Salvar</string>
</resources>